--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>my profile</title>
+<head>
+<body>
+  <!-- About Me section -->
+  <div style="Background-color:#add8e6 ; color:#000080;">
+    <h2>About Me</h2>
+    <p><strong>Chaudhari Shreyash Kiran</strong></p>
+    <img src="https://www.freepik.com/free-vector/handsome-man-face-cartoon_62318849.htm#fromView=image_search_similar&track=&regularType=vector&page=1&position=1&uuid=de57336e-51f9-4598-8fc7-51a440ed3c6e" alt="Profile Picture">
+    <p> A short description of myself.</p>
+  </div>
+  <!-- Education Section -->
+  <div style="Background-color:#d3d3d3; color:#2f4f4f;"
+    <h2>Education</h2>
+    <table>
+      <tr>
+        <th>Academic Year</tr>
+        <th>Standard</th>
+        <th>SchoolName </th>
+      </tr>
+      <!-- Add rows for each academic year -->
+    </table>
+  </div>
+  <!--Course @IIT Goa Section-->
+  <div style="background-color:#98fb98 ; color:#006400;'>
+    <h2>Course @IIT Goa </h2>
+    <h3> Spring Semester</h3>
+    <u1 style="list-style-type: square;">
+     <!-- Add list items for Spring Semester course-->
+    </u1>
+    <h3> Autumn Semester</h3>
+     <o1 style="list-style-type: upper roman;">
+        <!-- Add list items for Autumn Semester course-->
+     </o1>
+  </div>
 
+  <!-- Hobies, Interest, Extracurricular Activities,Project Section-->
+  <div style="background-color:#fff0f5 ;color:#c71585;">
+    <h2>Hobbies, Interest, Extracurricular Activities,Projects</h2>
+    <p>Mention your hobbies and interests here.</p>
+    <!-- Design this section creatively and images as needed>
+  </div>
+  </body>
+  </html>
