--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <div style="Background-color:#add8e6 ; color:#000080;">
     <h2>About Me</h2>
     <p><strong>Chaudhari Shreyash Kiran</strong></p>
-    <img src="https://www.freepik.com/free-vector/handsome-man-face-cartoon_62318849.htm#fromView=image_search_similar&track=&regularType=vector&page=1&position=1&uuid=de57336e-51f9-4598-8fc7-51a440ed3c6e"">
+    <img src="Blond man39s face cartoon illustration](https://img.freepik.com/free-vector/blond-man39s-face-cartoon-illustration_1308-153976.jpg">
     <p> A short description of myself.</p>
   </div>
   <!-- Education Section -->
