--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <h2>About Me</h2>
     <p><strong>Chaudhari Shreyash Kiran</strong></p>
     <img src="https://img.freepik.com/free-vector/blond-man39s-face-cartoon-illustration_1308-153976.jpg">
-    <p> A short description of myself.</p>
+    <p> A short description of myself:
+    * Age:  18 years
+    * Native place: Nahik, Maharashtra
+    * Date of Birth: 03/09/2005
+    </p>
   </div>
   <!-- Education Section -->
   <div style="Background-color:#d3d3d3; color:#2f4f4f;"
@@ -39,7 +43,11 @@
   <!-- Hobies, Interest, Extracurricular Activities,Project Section-->
   <div style="background-color:#fff0f5 ;color:#c71585;">
     <h2>Hobbies, Interest, Extracurricular Activities,Projects</h2>
-    <p>Mention your hobbies and interests here.</p>
+    <p>Dance
+ 2. Drawing 
+ 3. Basketball
+ 4. Singing
+ 5. Autocar enthusiasts</p>
     <!-- Design this section creatively and images as needed>
   </div>
   </body>
