--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h2>Education</h2>
     <table>
       <tr>
-        <th>Academic Year</tr>
+        <th>Academic Year</th>
         <th>Standard</th>
         <th>SchoolName </th>
       </tr>
