--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <p><strong>Chaudhari Shreyash Kiran</strong></p>
     <img src="https://img.freepik.com/free-vector/blond-man39s-face-cartoon-illustration_1308-153976.jpg">
     <p> A short description of myself:
-    * Age:  18 years
-    * Native place: Nahik, Maharashtra
-    * Date of Birth: 03/09/2005
+    Age:  18 years
+    Native place: Nahik, Maharashtra
+    Date of Birth: 03/09/2005
     </p>
   </div>
   <!-- Education Section -->
@@ -43,7 +43,8 @@
   <!-- Hobies, Interest, Extracurricular Activities,Project Section-->
   <div style="background-color:#fff0f5 ;color:#c71585;">
     <h2>Hobbies, Interest, Extracurricular Activities,Projects</h2>
-    <p>Dance
+    <p>
+ 1.Dance
  2. Drawing 
  3. Basketball
  4. Singing
