--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <h2>About Me</h2>
     <p><strong>Chaudhari Shreyash Kiran</strong></p>
     <img src="https://img.freepik.com/free-vector/blond-man39s-face-cartoon-illustration_1308-153976.jpg">
-    <p> A short description of myself:
+    <pre> A short description of myself:
     Age:  18 years
     Native place: Nahik, Maharashtra
     Date of Birth: 03/09/2005
-    </p>
+    </pre>
   </div>
   <!-- Education Section -->
   <div style="Background-color:#d3d3d3; color:#2f4f4f;"
