--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
      <!-- Add list items for Spring Semester course-->
     </u1>
     <h3> Autumn Semester</h3>
+    <pre>
+Autumn Semester
+I.MA101: Integration: Dr.Sandipan de
+II.CS101: Introduction to programming: Dr.Clint.p.george
+III.PH101: Physics: Dr.S.K.Das
+IV. CH102: Inorganic Chemistry: Dr.Raja Mitra
+V.CH101: Physical Chemistry: Dr.E.S.lyer
+
+    </pre>
      <o1 style="list-style-type: upper roman;">
         <!-- Add list items for Autumn Semester course-->
      </o1>
@@ -43,12 +52,12 @@
   <!-- Hobies, Interest, Extracurricular Activities,Project Section-->
   <div style="background-color:#fff0f5 ;color:#c71585;">
     <h2>Hobbies, Interest, Extracurricular Activities,Projects</h2>
-    <p>
+    <pre>
  1.Dance
  2. Drawing 
  3. Basketball
  4. Singing
- 5. Autocar enthusiasts</p>
+ 5. Autocar enthusiasts</pre>
     <!-- Design this section creatively and images as needed>
   </div>
   </body>
