--- a/index.html
+++ b/index.html
@@ -31,12 +31,20 @@
   <div style="background-color:#98fb98 ; color:#006400;'>
     <h2>Course @IIT Goa </h2>
     <h3> Spring Semester</h3>
+    <pre>
+    
+    CS102: Software Tools: Dr.Clint.p.george
+    EE101: Introduction to Electrical: Dr.Apeksha
+    BIO101: Introduction to biology: Dr.S.balakrishnan
+    PH102: Physics: Dr.Vaibhav wasnyk
+    MA103: BLA&ODE: Dr. Kalpesh Hariya & Dr.Lokpathi
+
+    </pre>
     <u1 style="list-style-type: square;">
      <!-- Add list items for Spring Semester course-->
     </u1>
     <h3> Autumn Semester</h3>
     <pre>
-Autumn Semester
 I.MA101: Integration: Dr.Sandipan de
 II.CS101: Introduction to programming: Dr.Clint.p.george
 III.PH101: Physics: Dr.S.K.Das
