--- a/index.html
+++ b/index.html
@@ -29,17 +29,19 @@
   </div>
   <!--Course @IIT Goa Section-->
   <div style="background-color:#98fb98 ; color:#006400;'>
-    <h2>Course @IIT Goa </h2>
-    <h3> Spring Semester</h3>
+  
+    <u1 style="list-style-type: square;">
+     <!-- Add list items for Spring Semester course-->
+    </u1>
+    <h2> Spring Semester</h2>
     <pre>
-    
-    CS102: Software Tools: Dr.Clint.p.george
-    EE101: Introduction to Electrical: Dr.Apeksha
-    BIO101: Introduction to biology: Dr.S.balakrishnan
-    PH102: Physics: Dr.Vaibhav wasnyk
-    MA103: BLA&ODE: Dr. Kalpesh Hariya & Dr.Lokpathi
 
-    </pre>
+I.CS102: Software Tools: Dr.Clint.p.george
+II.EE101: Introduction to Electrical: Dr.Apeksha
+III.BIO101: Introduction to biology: Dr.S.balakrishnan
+IV.PH102: Physics: Dr.Vaibhav wasnyk
+v.MA103: BLA&ODE: Dr. Kalpesh Hariya & Dr.Lokpathi
+
     <u1 style="list-style-type: square;">
      <!-- Add list items for Spring Semester course-->
     </u1>
