--- a/index.html
+++ b/index.html
@@ -24,7 +24,22 @@
         <th>Standard</th>
         <th>SchoolName </th>
       </tr>
-      <!-- Add rows for each academic year -->
+ 
+      <tr>
+        <td>2021</td>
+        <td>10th</td>
+        <td>St. Francis High School</td>
+      </tr>
+      <tr>
+        <td>2023</td>
+        <td>12th</td>
+        <td>Matoshri Junior College </td>
+      </tr>
+      <tr>
+        <td>2018</td>
+        <td>7th</td>
+        <td>Orion English Medium School </td>
+      </tr>
     </table>
   </div>
   <!--Course @IIT Goa Section-->
@@ -33,7 +48,7 @@
     <u1 style="list-style-type: square;">
      <!-- Add list items for Spring Semester course-->
     </u1>
-    <h2> Spring Semester</h2>
+    <h3> Spring Semester</h3>
     <pre>
 
 I.CS102: Software Tools: Dr.Clint.p.george
@@ -45,7 +60,7 @@ v.MA103: BLA&ODE: Dr. Kalpesh Hariya & Dr.Lokpathi
     <u1 style="list-style-type: square;">
      <!-- Add list items for Spring Semester course-->
     </u1>
-    <h3> Autumn Semester</h3>
+    <h2>Autumn Semester</h2>
     <pre>
 I.MA101: Integration: Dr.Sandipan de
 II.CS101: Introduction to programming: Dr.Clint.p.george
