--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>my profile</title>
-<head>
+  <title>My Profile</title>
+  <link rel="stylesheet" type="text/css" href="mycss.css">
+</head>
 <body>
   <!-- About Me section -->
-  <div style="Background-color:#add8e6 ; color:#000080;">
+  <div class="about-me">
     <h2>About Me</h2>
     <p><strong>Chaudhari Shreyash Kiran</strong></p>
-    <img src="https://img.freepik.com/free-vector/blond-man39s-face-cartoon-illustration_1308-153976.jpg">
-    <pre> A short description of myself:
-    Age:  18 years
-    Native place: Nahik, Maharashtra
-    Date of Birth: 03/09/2005
-    </pre>
+    <img src="https://img.freepik.com/free-vector/blond-man39s-face-cartoon-illustration_1308-153976.jpg" alt="Profile Picture">
+    <p class="description">A short description of myself:<br>
+    Age: 18 years<br>
+    Native place: Nahik, Maharashtra<br>
+    Date of Birth: 03/09/2005</p>
   </div>
+
   <!-- Education Section -->
-  <div style="Background-color:#d3d3d3; color:#2f4f4f;"
+  <div class="education">
     <h2>Education</h2>
     <table>
       <tr>
         <th>Academic Year</th>
         <th>Standard</th>
-        <th>SchoolName </th>
+        <th>School Name</th>
       </tr>
- 
       <tr>
         <td>2021</td>
         <td>10th</td>
@@ -33,57 +33,52 @@
       <tr>
         <td>2023</td>
         <td>12th</td>
-        <td>Matoshri Junior College </td>
+        <td>Matoshri Junior College</td>
       </tr>
       <tr>
         <td>2018</td>
         <td>7th</td>
-        <td>Orion English Medium School </td>
+        <td>Orion English Medium School</td>
       </tr>
     </table>
   </div>
-  <!--Course @IIT Goa Section-->
-  <div style="background-color:#98fb98 ; color:#006400;'>
-  
-    <u1 style="list-style-type: square;">
-     <!-- Add list items for Spring Semester course-->
-    </u1>
-    <h3> Spring Semester</h3>
-    <pre>
 
-I.CS102: Software Tools: Dr.Clint.p.george
-II.EE101: Introduction to Electrical: Dr.Apeksha
-III.BIO101: Introduction to biology: Dr.S.balakrishnan
-IV.PH102: Physics: Dr.Vaibhav wasnyk
-v.MA103: BLA&ODE: Dr. Kalpesh Hariya & Dr.Lokpathi
-
-    <u1 style="list-style-type: square;">
-     <!-- Add list items for Spring Semester course-->
-    </u1>
-    <h2>Autumn Semester</h2>
-    <pre>
-I.MA101: Integration: Dr.Sandipan de
-II.CS101: Introduction to programming: Dr.Clint.p.george
-III.PH101: Physics: Dr.S.K.Das
-IV. CH102: Inorganic Chemistry: Dr.Raja Mitra
-V.CH101: Physical Chemistry: Dr.E.S.lyer
-
-    </pre>
-     <o1 style="list-style-type: upper roman;">
-        <!-- Add list items for Autumn Semester course-->
-     </o1>
+  <!-- Course @IIT Goa Section -->
+  <div class="courses">
+    <div class="spring-semester">
+      <h3>Spring Semester</h3>
+      <ul>
+        <li><a href="#" class="course-link">I.CS102: <span>Software Tools</span></a> - Dr. Clint P. George</li>
+        <li><a href="#" class="course-link">II.EE101: <span>Introduction to Electrical</span></a> - Dr. Apeksha</li>
+        <li><a href="#" class="course-link">III.BIO101: <span>Introduction to Biology</span></a> - Dr. S. Balakrishnan</li>
+        <li><a href="#" class="course-link">IV.PH102: <span>Physics</span></a> - Dr. Vaibhav Wasnyk</li>
+        <li><a href="#" class="course-link">V.MA103: <span>BLA&ODE</span></a> - Dr. Kalpesh Hariya & Dr. Lokpathi</li>
+      </ul>
+    </div>
+    <div class="autumn-semester">
+      <h3>Autumn Semester</h3>
+      <ol>
+        <li><a href="#" class="course-link">I.MA101: <span>Integration</span></a> - Dr. Sandipan De</li>
+        <li><a href="#" class="course-link">II.CS101: <span>Introduction to Programming</span></a> - Dr. Clint P. George</li>
+        <li><a href="#" class="course-link">III.PH101: <span>Physics</span></a> - Dr. S.K. Das</li>
+        <li><a href="#" class="course-link">IV.CH102: <span>Inorganic Chemistry</span></a> - Dr. Raja Mitra</li>
+        <li><a href="#" class="course-link">V.CH101: <span>Physical Chemistry</span></a> - Dr. E.S. Iyer</li>
+      </ol>
+    </div>
   </div>
 
-  <!-- Hobies, Interest, Extracurricular Activities,Project Section-->
-  <div style="background-color:#fff0f5 ;color:#c71585;">
-    <h2>Hobbies, Interest, Extracurricular Activities,Projects</h2>
-    <pre>
- 1.Dance
- 2. Drawing 
- 3. Basketball
- 4. Singing
- 5. Autocar enthusiasts</pre>
-    <!-- Design this section creatively and images as needed>
+  <!-- Hobbies, Interests, Extracurricular Activities, Projects Section -->
+  <div class="hobbies">
+    <h2>Hobbies, Interests, Extracurricular Activities, Projects</h2>
+    <ul>
+      <li>Dance</li>
+      <li>Drawing</li>
+      <li>Basketball</li>
+      <li>Singing</li>
+      <li>Autocar Enthusiast</li>
+    </ul>
   </div>
-  </body>
-  </html>
+</body>
+</html>
+
+
